# Advent_of_Code

./: .gitattributes  .gitignore  .gitlab-ci.yml  README.md
2016/00/cobol_template/: CMakeLists.txt
2016/00/cobol_template/src/: cobol_template.cbl
2021/: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  rustfmt.toml
2021/00/rust_template/: Cargo.toml
2021/00/rust_template/benches/: puzzle_benchmark.rs  puzzle_benchmarks.rs
2021/00/rust_template/src/: lib.rs  main.rs
2021/00/rust_template/tests/: example_tests.rs
2021/01/sonar_sweep/: Cargo.toml
2021/01/sonar_sweep/benches/: puzzle_benchmark.rs  puzzle_benchmarks.rs
2021/01/sonar_sweep/input/: puzzle_input.txt
2021/01/sonar_sweep/src/: lib.rs  main.rs
2021/01/sonar_sweep/tests/: example_tests.rs
2021/02/dive/: Cargo.toml
2021/02/dive/benches/: puzzle_benchmark.rs  puzzle_benchmarks.rs
2021/02/dive/input/: puzzle_input.txt
2021/02/dive/src/: lib.rs  main.rs
2021/02/dive/tests/: example_tests.rs
2021/03/binary_diagnostic/: Cargo.toml
2021/03/binary_diagnostic/benches/: puzzle_benchmark.rs  puzzle_benchmarks.rs
2021/03/binary_diagnostic/input/: puzzle_input.txt
2021/03/binary_diagnostic/src/: lib.rs  main.rs
2021/03/binary_diagnostic/tests/: example_tests.rs
2021/04/giant_squid/: Cargo.toml
2021/04/giant_squid/benches/: puzzle_benchmark.rs  puzzle_benchmarks.rs
2021/04/giant_squid/input/: puzzle_input.txt
2021/04/giant_squid/src/: bingo_board.rs  lib.rs  main.rs
2021/04/giant_squid/tests/: example_tests.rs
2021/05/hydrothermal_venture/: Cargo.toml
2021/05/hydrothermal_venture/benches/: puzzle_benchmark.rs
2021/05/hydrothermal_venture/input/: puzzle_input.txt
2021/05/hydrothermal_venture/src/: lib.rs  main.rs  sea_floor.rs
2021/05/hydrothermal_venture/tests/: example_tests.rs
2021/06/lanternfish/: Cargo.toml
2021/06/lanternfish/benches/: puzzle_benchmark.rs
2021/06/lanternfish/input/: puzzle_input.txt
2021/06/lanternfish/src/: lib.rs  main.rs
2021/06/lanternfish/tests/: example_tests.rs
2021/07/treachery_of_whales/: Cargo.toml
2021/07/treachery_of_whales/benches/: puzzle_benchmark.rs  puzzle_benchmarks.rs
2021/07/treachery_of_whales/input/: puzzle_input.txt
2021/07/treachery_of_whales/src/: lib.rs  main.rs
2021/07/treachery_of_whales/tests/: example_tests.rs
2021/08/seven_segment_search/: Cargo.toml
2021/08/seven_segment_search/benches/: puzzle_benchmark.rs  puzzle_benchmarks.rs
2021/08/seven_segment_search/input/: puzzle_input.txt
2021/08/seven_segment_search/src/: lib.rs  main.rs  seven_segment_display.rs
2021/08/seven_segment_search/tests/: example_tests.rs
2021/09/smoke_basin/: Cargo.toml
2021/09/smoke_basin/benches/: puzzle_benchmark.rs  puzzle_benchmarks.rs
2021/09/smoke_basin/input/: puzzle_input.txt
2021/09/smoke_basin/src/: lib.rs  main.rs
2021/09/smoke_basin/tests/: example_tests.rs
2021/10/syntax_scoring/: Cargo.toml
2021/10/syntax_scoring/benches/: puzzle_benchmark.rs
2021/10/syntax_scoring/input/: puzzle_input.txt
2021/10/syntax_scoring/src/: lib.rs  main.rs  syntax_checker.rs
2021/10/syntax_scoring/tests/: example_tests.rs
2021/11/dumbo_octopus/: Cargo.toml
2021/11/dumbo_octopus/benches/: puzzle_benchmark.rs
2021/11/dumbo_octopus/input/: puzzle_input.txt
2021/11/dumbo_octopus/src/: lib.rs  main.rs
2021/11/dumbo_octopus/tests/: example_tests.rs
2021/12/passage_pathing/: Cargo.toml
2021/12/passage_pathing/benches/: puzzle_benchmark.rs  puzzle_benchmarks.rs
2021/12/passage_pathing/input/: puzzle_input.txt
2021/12/passage_pathing/src/: caves.rs  lib.rs  main.rs
2021/12/passage_pathing/tests/: example_tests.rs
2021/13/transparent_origami/: Cargo.toml
2021/13/transparent_origami/benches/: puzzle_benchmark.rs  puzzle_benchmarks.rs
2021/13/transparent_origami/input/: puzzle_input.txt
2021/13/transparent_origami/src/: lib.rs  main.rs  origami.rs
2021/13/transparent_origami/tests/: example_tests.rs
2021/14/extended_polymerization/: Cargo.toml
2021/14/extended_polymerization/benches/: puzzle_benchmark.rs
2021/14/extended_polymerization/input/: puzzle_input.txt
2021/14/extended_polymerization/src/: lib.rs  lib_naive.rs  main.rs  polymer.rs
2021/14/extended_polymerization/tests/: example_tests.rs
2021/15/chiton/: Cargo.toml
2021/15/chiton/benches/: puzzle_benchmark.rs  puzzle_benchmarks.rs
2021/15/chiton/input/: puzzle_input.txt
2021/15/chiton/src/: graph.rs  lib.rs  main.rs
2021/15/chiton/tests/: example_tests.rs
2021/16/packet_decoder/: Cargo.toml
2021/16/packet_decoder/benches/: puzzle_benchmark.rs  puzzle_benchmarks.rs
2021/16/packet_decoder/input/: puzzle_input.txt
2021/16/packet_decoder/src/: decoder.rs  lib.rs  main.rs
2021/16/packet_decoder/tests/: example_tests.rs
2021/17/trick_shot/: Cargo.toml
2021/17/trick_shot/benches/: puzzle_benchmark.rs  puzzle_benchmarks.rs
2021/17/trick_shot/input/: puzzle_input.txt
2021/17/trick_shot/src/: lib.rs  main.rs
2021/17/trick_shot/tests/: example_tests.rs
2021/18/snailfish/: Cargo.toml
2021/18/snailfish/benches/: puzzle_benchmark.rs  puzzle_benchmarks.rs
2021/18/snailfish/input/: puzzle_input.txt
2021/18/snailfish/src/: lib.rs  main.rs  pair.rs
2021/18/snailfish/tests/: example_tests.rs
2021/19/beacon_scanner/: Cargo.toml
2021/19/beacon_scanner/benches/: puzzle_benchmark.rs  puzzle_benchmarks.rs
2021/19/beacon_scanner/input/: puzzle_input.txt
2021/19/beacon_scanner/src/: lib.rs  main.rs  scanner.rs
2021/19/beacon_scanner/tests/: example_tests.rs
2021/20/trench_map/: Cargo.toml
2021/20/trench_map/benches/: puzzle_benchmarks.rs
2021/20/trench_map/input/: puzzle_input.txt
2021/20/trench_map/src/: lib.rs  main.rs
2021/20/trench_map/tests/: example_tests.rs
2021/21/dirac_dice/: Cargo.toml
2021/21/dirac_dice/benches/: puzzle_benchmarks.rs
2021/22/reactor_reboot/: Cargo.toml
2021/23/amphipod/: Cargo.toml
2021/24/arithmetic_logic_unit/: Cargo.toml
2021/25/sea_cucumber/: Cargo.toml
2021/5/hydrothermal_venture/: Cargo.toml
2021/8/seven_segment_search/: Cargo.toml
(+1788 files in other folders)
