[workspace]

members = [
  "00/rust_template",
  "02/dive",
  "03/binary_diagnostic",
  "04/giant_squid",
  "05/hydrothermal_venture",
  "06/lanternfish",
  "07/treachery_of_whales",
  "08/seven_segment_search",
  "09/smoke_basin",
  "10/syntax_scoring",
  "11/dumbo_octopus",
  "12/passage_pathing"
]
