[workspace]

members = [
  "00/rust_template",
  "01/sonar_sweep",
  "02/dive",
  "03/binary_diagnostic",
  "04/giant_squid",
  "05/hydrothermal_venture",
  "06/lanternfish",
  "07/treachery_of_whales",
  "08/seven_segment_search",
  "09/smoke_basin",
  "10/syntax_scoring",
  "11/dumbo_octopus",
  "12/passage_pathing",
  "13/transparent_origami",
  "14/extended_polymerization",
  "15/chiton",
  "16/packet_decoder",
  "17/trick_shot",
  "18/snailfish",
  "19/beacon_scanner",
  "20/trench_map",
  "21/dirac_dice",
  "22/reactor_reboot"
]
