[package]
name = "sonar_sweep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sonar_sweep"
path = "src/sonar_sweep/lib.rs"
test = true
doctest = false
bench = false

[[bin]]
name = "sonar_sweep"
path = "src/main.rs"
test = false
doctest = false
bench = false

[[bench]]
name = "puzzle_benchmark"
harness = false
test = false
doctest = false
bench = true

[dependencies.criterion]
version = "0.3.5"
features = ["html_reports"]

[dependencies.clap]
git = "https://github.com/clap-rs/clap.git"
features = ["derive"]
