[package]
name = "dive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[lib]
#name = "dive"
#path = "src/dive/lib.rs"
#test = true
#doctest = false
#bench = false

[[bin]]
name = "dive"
path = "src/main.rs"
test = false
doctest = false
bench = false

[dependencies.clap]
git = "https://github.com/clap-rs/clap.git"
features = ["derive"]
