[package]
name = "binary_diagnostic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[lib]
#name = "binary_diagnostic"
#path = "src/binary_diagnostic/lib.rs"
#test = true
#doctest = false
#bench = false

[[bin]]
name = "binary_diagnostic"
path = "src/main.rs"
test = false
doctest = false
bench = false

[dependencies.clap]
git = "https://github.com/clap-rs/clap.git"
features = ["derive"]
