[package]
name = "treachery_of_whales"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[lib]
#name = "treachery_of_whales"
#path = "src/treachery_of_whales/lib.rs"
#test = true
#doctest = false
#bench = false

[[bin]]
name = "treachery_of_whales"
path = "src/main.rs"
test = true
doctest = false
bench = false

[dependencies.clap]
git = "https://github.com/clap-rs/clap.git"
features = ["derive"]
