[package]
name = "seven_segment_search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[lib]
#name = "seven_segment_search"
#path = "src/seven_segment_search/lib.rs"
#test = true
#doctest = false
#bench = false

[[bin]]
name = "seven_segment_search"
path = "src/main.rs"
test = true
doctest = false
bench = false

[dependencies.clap]
git = "https://github.com/clap-rs/clap.git"
features = ["derive"]
