[package]
name = "dumbo_octopus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dumbo_octopus"
path = "src/dumbo_octopus/lib.rs"
test = true
doctest = false
bench = false

[[bin]]
name = "dumbo_octopus"
path = "src/main.rs"
test = false
doctest = false
bench = false

[dependencies.clap]
git = "https://github.com/clap-rs/clap.git"
features = ["derive"]
