[package]
name = "passage_pathing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "passage_pathing"
path = "src/passage_pathing/lib.rs"
test = true
doctest = false
bench = false

[[bin]]
name = "passage_pathing"
path = "src/main.rs"
test = false
doctest = false
bench = false

[dependencies.clap]
git = "https://github.com/clap-rs/clap.git"
features = ["derive"]
