[package]
name = "transparent_origami"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "transparent_origami"
path = "src/transparent_origami/lib.rs"
test = true
doctest = false
bench = false

[[bin]]
name = "transparent_origami"
path = "src/main.rs"
test = false
doctest = false
bench = false

[dependencies.clap]
git = "https://github.com/clap-rs/clap.git"
features = ["derive"]
