[package]
name = "chiton"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "chiton"
path = "src/chiton/lib.rs"
test = true
doctest = false
bench = false

[[bin]]
name = "chiton"
path = "src/main.rs"
test = false
doctest = false
bench = false

[[bench]]
name = "puzzle_benchmark"
harness = false
test = false
doctest = false
bench = true

[dependencies.criterion]
version = "0.3.5"

[dependencies.clap]
git = "https://github.com/clap-rs/clap.git"
features = ["derive"]

[dependencies.priority-queue]
git = "https://github.com/garro95/priority-queue"

[dependencies.pretty_assertions]
git = "https://github.com/colin-kiegel/rust-pretty-assertions"
